find_package(CURL REQUIRED)

option(USE_OPENSSL "Use OpenSSL instead of GnuTLS" OFF)

find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)
pkg_search_module(UUID REQUIRED uuid)

if (NOT ${USE_OPENSSL})
  find_package(GnuTLS REQUIRED)
  set(EXTRA_INCLUDE ${GNUTLS_INCLUDE_DIR})
  set(EXTRA_LIBRARIES ${GNUTLS_LIBRARIES})
else()
  add_definitions(-DUSE_OPENSSL)
endif()

add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_THREAD_LIBS_INIT} ${WARNING} ${CMAKE_CXX_FLAGS}")
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${CURL_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR} ${UUID_INCLUDE_DIR} ${EXTRA_INCLUDE})

file(GLOB AZURE_GENREAL_HEADER_FILES *.h)
file(GLOB AZURE_BLOB_HEADER_FILES blob/*.h)
file(GLOB AZURE_HTTP_HEADER_FILES http/*.h)
file(GLOB AZURE_TODO_HEADER_FILES todo/*.h)
list(APPEND AZURE_HEADER_FILES 
    ${AZURE_GENREAL_HEADER_FILES}
    ${AZURE_BLOB_HEADER_FILES}
    ${AZURE_HTTP_HEADER_FILES}
    ${AZURE_TODO_HEADER_FILES})
file(GLOB AZURE_GENERAL_SOURCE_FILES *.cpp)
file(GLOB AZURE_BLOB_SOURCE_FILES blob/*.cpp)
file(GLOB AZURE_HTTP_SOURCE_FILES http/*.cpp)
list(APPEND AZURE_SOURCE_FILES
    ${AZURE_GENERAL_SOURCE_FILES}
    ${AZURE_BLOB_SOURCE_FILES}
    ${AZURE_HTTP_SOURCE_FILES})

COLMAP_ADD_LIBRARY(azure_storage_lite
    ${AZURE_HEADER_FILES}
    ${AZURE_SOURCE_FILES})

target_link_libraries(azure_storage_lite ${CURL_LIBRARIES} ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY} ${UUID_LIBRARIES} ${EXTRA_LIBRARIES})
